--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="searchbar_hint">Search Username</string>
     <string name="settings">settings</string>
     <string name="github_user">Github User</string>
+    <string name="follower">Follower</string>
+    <string name="following">Following</string>
 </resources>
